--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,14 @@
+@import './fonts.css';
+
 * {
   box-sizing: border-box;
+}
+
+html {
+  font-family: 'San Francisco', 'Helvetica Neue', 'Lucida Grande', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
