--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import './fonts.css';
+@import './variables.css';
 
 * {
   box-sizing: border-box;
@@ -8,6 +9,7 @@ html {
   font-family: 'San Francisco', 'Helvetica Neue', 'Lucida Grande', sans-serif;
   font-weight: 400;
   font-style: normal;
+  line-height: normal;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
