--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,7 +18,7 @@ html {
 body {
   height: 100dvh;
 
-  background-image: url('/background.jpg');
+  background-image: url('/img/background.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
