--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,6 @@
 :root {
-  --header-height: 51px;
+  --navbar-height: 24px;
+  --modal-header-height: 51px;
 
   --modal-background: #1c1d1f;
   --transparent-modal-background: rgba(40, 40, 40, 0.75);
